--- a/styles/ant.css
+++ b/styles/ant.css
@@ -201,6 +201,9 @@ html {
     margin: 0px 12px;
     background-color: white;
 }
+.ant-input-group .ant-input{
+    line-height: 300px !important;
+}
 
 @media screen and (max-width: 1100px) {
     .ant-tabs-nav {
